@@ -297,7 +297,7 @@ SC.Observable = {
     }
   */  
   didChangeFor: function(context) {    
-    var keys = $A(arguments) ;
+    var keys = SC.$A(arguments) ;
     context = keys.shift() ;
     
     var ret = false ;
@@ -374,7 +374,7 @@ SC.Observable = {
     @returns {Array} Values of property keys.
   */
   getEach: function() {
-    var keys = $A(arguments).flatten() ;
+    var keys = SC.$A(arguments).flatten() ;
     var ret = [];
     for(var idx=0; idx<keys.length;idx++) {
       ret[ret.length] = this.getPath(keys[idx]);
@@ -646,7 +646,7 @@ SC.Observable = {
     @param propertyNames one or more property names
   */
   logProperty: function() {
-    var props = $A(arguments) ;
+    var props = SC.$A(arguments) ;
     for(var idx=0;idx<props.length; idx++) {
       var prop = props[idx] ;
       console.log('%@:%@: '.fmt(this._guid, prop), this.get(prop)) ;
@@ -686,7 +686,7 @@ SC.Observable = {
     change.
   */  
   registerDependentKey: function(key) {
-    var keys = $A(arguments) ;
+    var keys = SC.$A(arguments) ;
     var dependent = keys.shift() ;
     var kvo = this._kvo() ;
     for(var loc=0;loc<keys.length;loc++) {
@@ -918,14 +918,14 @@ Object.extend(Function.prototype,
     @returns {Function} the declared function instance
   */
   property: function() {
-    this.dependentKeys = $A(arguments) ; 
+    this.dependentKeys = SC.$A(arguments) ; 
     this.isProperty = true; return this; 
   },
   
   // Declare that a function should observe an object at the named path.  Note
   // that the path is used only to construct the observation one time.
   observes: function(propertyPaths) { 
-    this.propertyPaths = $A(arguments); 
+    this.propertyPaths = SC.$A(arguments); 
     return this;
   },
   
@@ -953,7 +953,7 @@ Object.extend(Function.prototype,
     if (interval === undefined) interval = 1 ;
     var f = this;
     if (arguments.length > 2) {
-      var args =$A(arguments).slice(2,arguments.length);
+      var args =SC.$A(arguments).slice(2,arguments.length);
       args.unshift(target);
       f = f.bind.apply(f, args) ;
     }
