@@ -1,4 +1,7 @@
 
+- Added SC.SC.$A() helper.  This works like Prototype's SC.$A() except that it will
+  work with any enumerable.  It is also namespaced properly. [CAJ]
+  
 - Added "application/json" to the default Accept header for all servers.
   Required for proper support of json format. [Lawrence Pit]
   
